[package]
name = "find-new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.2"
data-types = { version = "0.1.0", path = "../data-types" }
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.23", features = ["socks", "rustls-tls-webpki-roots"], default-features = false }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
